# enterprise-mlops-airflow-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  README.md  ROADMAP.md  deployment.yaml  docker-compose.yml  model-artifacts-pvc.yaml  pyproject.toml  requirements.txt  training-job.yaml
airflow/dags/: ml_pipeline_dag.py
scripts/: build_docker.ps1  deploy_k8s.ps1  run_pipeline.ps1  run_streamlit.ps1  run_tests.ps1  setup_env.ps1
src/enterprise_mlops_airflow_platform/: __init__.py  data_pipeline.py  modeling.py  pipeline.py
streamlit/: app.py
tests/: test_pipeline.py
